cmake_minimum_required(VERSION 3.21)
project(Personal)

set(CMAKE_CXX_STANDARD 20)

add_executable(Personal main.cpp
        "C++ Course/Section1/Section1.h" "C++ Course/Section1/Exercises.cpp"
        "C++ Course/Section2/Section2.h" "C++ Course/Section2/Exercises.cpp"
        "C++ Course/Section3/Section3.h" "C++ Course/Section3/Exercises.cpp"
        "C++ Course/Section4/Section4.h" "C++ Course/Section4/Exercises.cpp"
        "C++ Course/Section5/Section5.h" "C++ Course/Section5/Exercises.cpp"
        )
